# msg-agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/agentic/: config.py  edges.py  graph.py  prompts.py  state.py
src/agentic/nodes/: agent.py  human.py  tool.py
src/agentic/schema/: models.py  prompts.py  tools.py
src/mcp/: adapter.py
src/mcp_module/: adapter.py
src/utils/: helpers.py  models.py
tests/: client.py  conftest.py  test_human_clarification.py  test_human_confirmation.py
tests/benchmark/: test_policy_router_speed.py  test_task_executor_speed.py
tests/unit/: test_policy_router.py  test_task_executor.py
