[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agentic",
    "src/mcp_module",
    "src/utils",
]

[project]
name = "msg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[google-genai,openai]>=1.2.3",
    "langgraph>=1.0.5",
    "typing>=3.10.0.0",
]
